# AnyWords

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_zh.md  anywords.sample.yml  anywords.yml  docseek.sample.yml  docseek.yml  package.bat  start.bat
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  api.ts  hooks.ts  index.css  types.ts
frontend/src/components/: DirectoryPicker.tsx  IndexPanel.tsx  SearchBar.tsx  SearchResults.tsx
src/: config.rs  main.rs
src/api/: index_api.rs  mcp.rs  mod.rs  router.rs  search.rs
src/index/: engine.rs
src/parser/: extractor.rs  mod.rs  tika.rs
src/watcher/: monitor.rs
