[package]
name = "docseek"
version = "0.1.0"
edition = "2021"
description = "A web-based desktop file full-text search engine"
authors = ["DocSeek Team"]
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Search engine
tantivy = "0.22"
tantivy-jieba = "0.11"

# File monitoring
notify = { version = "7", features = ["macos_kqueue"] }

# File type detection
tree_magic_mini = "3.1"

# Content extraction
encoding_rs = "0.8"
charset = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Config & paths
dirs = "6"
once_cell = "1"

# Compression (for doc parsing)
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

# HTTP client (for Tika server calls)
reqwest = { version = "0.12", features = ["multipart", "stream"] }

# Async utilities
tokio-util = { version = "0.7", features = ["io"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
regex = "1"
walkdir = "2"
